kubernetes/apps/meshcentral/app/ext-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox-external
  namespace: netbox
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: netbox.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbox
                port:
                  number: 80
  tls:
    - hosts:
        - netbox.${SECRET_DOMAIN}
